...
            "state": "translated",
            "value": "Adotta anche il suo nickname e il suo avatar"
          }
        }
      }
    },
    "Ajouter un joueur": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Spieler hinzufügen"
          }
...
            "state": "translated",
            "value": "Codice di associazione"
          }
        }
      }
    },
    "Commencer": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Starten"
          }
...
            "state": "translated",
            "value": "In breve"
          }
        }
      }
    },
    "Enregistrer": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Speichern"
          }
...
            "state": "translated",
            "value": "Gioco"
          }
        }
      }
    },
    "Jeux": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Spiele"
          }
...
            "state": "translated",
            "value": "Profilo condiviso"
          }
        }
      }
    },
    "Pseudo": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Spitzname"
          }
...
            "state": "translated",
            "value": "Fallito (0)"
          }
        }
      }
    },
    "Rechercher un jeu": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Spiel suchen"
          }
...
            "state": "translated",
            "value": "Riprendi la partita"
          }
        }
      }
    },
    "Reprendre la partie en cours": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Laufende Partie fortsetzen"
          }
...
